--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
   "homepage": "https://github.com/simochee/uswan3.api#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "path": "^0.12.7",
-    "serve-favicon": "^2.3.0",
-    "sqlite3": "^3.1.6"
+    "express": "^4.14.0"
   }
 }
